[package]
name = "rust_rubka"
version = "0.1.0"
edition = "2021"
authors = ["AmirrezaJalilian"]
description = "A Rust library for interacting with Rubika Bot API"
repository = "https://github.com/AmirrezaJalilian/RustRubka"

[dependencies]
reqwest = { version = "0.12.26", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
